--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <source src="img/video/video.ogv" type="video/ogv">
             </video>
         </div><!-- contenedor-video -->
-      </section> <!-- Programa -->
+    
 
       <div class="contenido-programa">
           <div class="contenedor">
@@ -109,11 +109,11 @@
                         <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
                     </div>
                     <a href="#" class="button float-right">ver todos</a>
-                </div>
-              </div>
-          </div>
+                </div><!--info-curso-->
+              </div><!--programa-evento -->
+          </div><!--COntenedor -->
       </div><!--COntenido-programa-->
-
+    </section> <!-- Programa -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
