--- a/index.html
+++ b/index.html
@@ -114,6 +114,49 @@
           </div><!--COntenedor -->
       </div><!--COntenido-programa-->
     </section> <!-- Programa -->
+
+
+    <section class="invitados contenedor seccion">
+        <h2>Nuestros invitados</h2>
+        <ul class="lista-invitados">
+            <li>
+                <div class="invitado">
+                    <img src="img/invitado1.jpg" alt="imagen invitado" >
+                    <p>Rafael Bautista</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="img/invitado2.jpg" alt="imagen invitado" >
+                        <p>Sharri Herrera</p>
+                    </div>
+                </li>
+                <li>
+                        <div class="invitado">
+                            <img src="img/invitado3.jpg" alt="imagen invitado" >
+                            <p>Gregorio Sanchez</p>
+                        </div>
+                    </li>
+                    <li>
+                            <div class="invitado">
+                                <img src="img/invitado4.jpg" alt="imagen invitado" >
+                                <p>Suzana Rivera</p>
+                            </div>
+                        </li>
+                        <li>
+                                <div class="invitado">
+                                    <img src="img/invitado5.jpg" alt="imagen invitado" >
+                                    <p>Jarold garcia</p>
+                                </div>
+                            </li>
+                            <li>
+                                    <div class="invitado">
+                                        <img src="img/invitado6.jpg" alt="imagen invitado" >
+                                        <p>Suzan Sanchez</p>
+                                    </div>
+                                </li>
+        </ul>
+    </section><!--invitados-->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
