add two new section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <section class="invitados contenedor seccion">
         <h2>Nuestros invitados</h2>
-        <ul class="lista-invitados">
+        <ul class="lista-invitados clearfix">
             <li>
                 <div class="invitado">
                     <img src="img/invitado1.jpg" alt="imagen invitado" >
@@ -126,37 +126,94 @@
                 </div>
             </li>
             <li>
-                <div class="invitado">
+                 <div class="invitado">
                     <img src="img/invitado2.jpg" alt="imagen invitado" >
                         <p>Sharri Herrera</p>
                     </div>
-                </li>
-                <li>
-                        <div class="invitado">
-                            <img src="img/invitado3.jpg" alt="imagen invitado" >
-                            <p>Gregorio Sanchez</p>
-                        </div>
-                    </li>
-                    <li>
-                            <div class="invitado">
-                                <img src="img/invitado4.jpg" alt="imagen invitado" >
-                                <p>Suzana Rivera</p>
-                            </div>
-                        </li>
-                        <li>
-                                <div class="invitado">
-                                    <img src="img/invitado5.jpg" alt="imagen invitado" >
-                                    <p>Jarold garcia</p>
-                                </div>
-                            </li>
-                            <li>
-                                    <div class="invitado">
-                                        <img src="img/invitado6.jpg" alt="imagen invitado" >
-                                        <p>Suzan Sanchez</p>
-                                    </div>
-                                </li>
+            </li>
+            <li>
+                 <div class="invitado">
+                    <img src="img/invitado3.jpg" alt="imagen invitado" >
+                         <p>Gregorio Sanchez</p>
+                 </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="img/invitado4.jpg" alt="imagen invitado" >
+                        <p>Suzana Rivera</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="img/invitado5.jpg" alt="imagen invitado" >
+                        <p>Jarold garcia</p>
+                </div>
+            </li>
+            <li>
+                 <div class="invitado">
+                    <img src="img/invitado6.jpg" alt="imagen invitado" >
+                        <p>Suzan Sanchez</p>
+                </div>
+            </li>
         </ul>
     </section><!--invitados-->
+
+    <div class="contador parallax">
+        <div class="contenedor">
+            <ul class="resumen-evento">
+                <li><p class="numero">6</p>Invitados</li>
+                <li><p class="numero">15</p>Talleres</li>
+                <li><p class="numero">3</p>Dias</li>
+                <li><p class="numero">9</p>Conferencias</li>
+            </ul>
+        </div>
+    </div>
+
+    <section class=" seccion">
+        <h2>precios</h2>
+        <div class="contenedor">
+            <ul class="lista-precios clearfix">
+                <li>
+                    <div class="tabla-precio">
+                        <h3>pase por dia</h3>
+                        <p class="numero">$30</p>
+                        <ul>
+                            <li>Bocadillos gratis</li>
+                            <li>Todas las conferencias</li>
+                            <li>Todos los talleres</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>TOdos los dias</h3>
+                        <p class="numero">$50</p>
+                        <ul>
+                            <li>Bocadillos gratis</li>
+                            <li>Todas las conferencias</li>
+                            <li>Todos los talleres</li>
+                        </ul>
+                        <a href="#" class="button">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>pase por 2 dias</h3>
+                        <p class="numero">$30</p>
+                        <ul>
+                            <li>Bocadillos gratis</li>
+                            <li>Todas las conferencias</li>
+                            <li>Todos los talleres</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
