--- a/index.html
+++ b/index.html
@@ -213,7 +213,57 @@
         </div>
     </section>
 
+    <div id="mapa" class="mapa"></div>
 
+    <section class="seccion">
+        <h2>Testimoniales</h2>
+        <div class="testimoniales">
+            <div class="testimonial contenedor clearfix">
+            <blockquote>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <footer class="info-testimonial clearfix">
+                    <img src="img/testimonial.jpg" alt="imagen testimonial">
+                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
+                </footer>
+            </blockquote>
+        </div> <!-- Testimonial -->
+        <div class="testimonial">
+            <blockquote>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <footer class="info-testimonial clearfix">
+                    <img src="img/testimonial.jpg" alt="imagen testimonial">
+                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
+                </footer>
+            </blockquote>
+        </div> <!-- Testimonial -->
+        <div class="testimonial">
+            <blockquote>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <footer class="info-testimonial clearfix"> 
+                    <img src="img/testimonial.jpg" alt="imagen testimonial">
+                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
+                </footer >
+            </blockquote>
+        </div> <!-- Testimonial -->
+    </div><!--Testimoniales -->
+    </section>
+
+
+    <div class="newsletter parallax">
+        <div class="contenido contenedor">
+            <p>registrate al newletter</p>
+            <h3>gdlwebcamp</h3>
+            <a href="#" class="button transparent">Registro</a>
+        </div>
+    </div>
+
+    
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
