--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </div><!--Testimoniales -->
     </section>
 
-
+<section class="seccion">
     <div class="newsletter parallax">
         <div class="contenido contenedor">
             <p>registrate al newletter</p>
@@ -262,7 +262,7 @@
             <a href="#" class="button transparent">Registro</a>
         </div>
     </div>
-
+</section>
     
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
