fixed position background

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <section class="seccion">
         <h2>Testimoniales</h2>
-        <div class="testimoniales">
+        <div class="testimoniales clearfix">
             <div class="testimonial contenedor clearfix">
             <blockquote>
                 <p>
@@ -254,15 +254,15 @@
     </div><!--Testimoniales -->
     </section>
 
-<section class="seccion">
+
     <div class="newsletter parallax">
-        <div class="contenido contenedor">
+        <div class="contenido contenedor ">
             <p>registrate al newletter</p>
             <h3>gdlwebcamp</h3>
             <a href="#" class="button transparent">Registro</a>
         </div>
     </div>
-</section>
+
     
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
