html: new section count

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <span></span>
                   <span></span>
               </div>
-              <nav class="navegacion-principal">
+              <nav class="navegacion-principal clearfix">
                   <a href="">Conferencia</a>
                   <a href="">Calendario</a>
                   <a href="">Invitado</a>
@@ -259,9 +259,23 @@
         <div class="contenido contenedor ">
             <p>registrate al newletter</p>
             <h3>gdlwebcamp</h3>
-            <a href="#" class="button transparent">Registro</a>
+            <a href="#" class="button transparente">Registro</a>
         </div>
-    </div>
+    </div><!--contenido -->
+
+    <section class="seccion">
+
+        <h2>faltan</h2>
+        <div class="cuenta-regresiva contenedor">
+            <ul class="clearfix">
+                <li><p class="numero">80</p>Dias</li>
+                <li><p class="numero">15</p>horas</li>
+                <li><p class="numero">5</p>minutos</li>
+                <li><p class="numero">30</p>segundos</li>
+            </ul>
+        </div>
+
+    </section>
 
     
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
