--- a/registro.html
+++ b/registro.html
@@ -67,111 +67,29 @@
           </div> <!-- contenedor -->
       </div> <!--barra -->
 
-
       <section class="seccion contenedor">
-          <h2>La mejor conferencia de diseño web en español</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-          </p>
-      </section>
-
-
-      <section class="programa">
-        <div class="contenedor-video">
-            <video autoplay loop poster="bg-talleres.jpg">
-                <source src="img/video/video.mp4" type="video/mp4">
-                <source src="img/video/video.webm" type="video/webm">
-                <source src="img/video/video.ogv" type="video/ogv">
-            </video>
-        </div><!-- contenedor-video -->
-    
-
-      <div class="contenido-programa">
-          <div class="contenedor">
-              <div class="programa-evento">
-                <h2>Programa del evento</h2>
-                <nav class="menu-programa">
-                    <a href="#Talleres"><i class="fas fa-code"></i>Talleres</a>
-                    <a href="#Conferencias"><i class="fas fa-comment"></i>Conferencias</a>
-                    <a href="#Seminarios"><i class="fas fa-university"></i>Seminarios</a>
-                </nav>
-                <div id="talleres" class="info-curso ocultar clearfix">
-                    <div class="detalle-evento">
-                        <h3> HTML, CSS3 y JavaScript</h3>
-                        <p><i class="fas fa-clock"></i> 16:00</p>
-                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
-                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
-                    </div>
-                    <div class="detalle-evento">
-                        <h3> Responsive Web Design </h3>
-                        <p><i class="fas fa-clock"></i> 20s:00</p>
-                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
-                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
-                    </div>
-                    <a href="#" class="button float-right">ver todos</a>
-                </div><!--info-curso-->
-              </div><!--programa-evento -->
-          </div><!--COntenedor -->
-      </div><!--COntenido-programa-->
-    </section> <!-- Programa -->
-
-
-    <section class="invitados contenedor seccion">
-        <h2>Nuestros invitados</h2>
-        <ul class="lista-invitados clearfix">
-            <li>
-                <div class="invitado">
-                    <img src="img/invitado1.jpg" alt="imagen invitado" >
-                    <p>Rafael Bautista</p>
+        <h2>registro de usuario</h2>
+        <form id="registro"  class="registro" action="index.html" method="post"></form>
+            <div class="datos-usuario" class="registro caja clearfix">
+                <div class="campo">
+                    <label for="nombre"> Nombre</label>
+                    <input type="text" id="nombre" name="nombre" placeholder="tu nombre">
                 </div>
-            </li>
-            <li>
-                 <div class="invitado">
-                    <img src="img/invitado2.jpg" alt="imagen invitado" >
-                        <p>Sharri Herrera</p>
-                    </div>
-            </li>
-            <li>
-                 <div class="invitado">
-                    <img src="img/invitado3.jpg" alt="imagen invitado" >
-                         <p>Gregorio Sanchez</p>
-                 </div>
-            </li>
-            <li>
-                <div class="invitado">
-                    <img src="img/invitado4.jpg" alt="imagen invitado" >
-                        <p>Suzana Rivera</p>
+                <div class="campo">
+                    <label for="apellido"> Apellido</label>
+                    <input type="text" id="apellido" name="apellido" placeholder="tu apellido">
                 </div>
-            </li>
-            <li>
-                <div class="invitado">
-                    <img src="img/invitado5.jpg" alt="imagen invitado" >
-                        <p>Jarold garcia</p>
+                <div class="campo">
+                    <label for="email"> Email</label>
+                    <input type="email" id="email" name="email" placeholder="tu email">
                 </div>
-            </li>
-            <li>
-                 <div class="invitado">
-                    <img src="img/invitado6.jpg" alt="imagen invitado" >
-                        <p>Suzan Sanchez</p>
-                </div>
-            </li>
-        </ul>
-    </section><!--invitados-->
+                <div id="error"></div>
+            </div><!-- fin datos usuario -->
 
-    <div class="contador parallax">
-        <div class="contenedor">
-            <ul class="resumen-evento">
-                <li><p class="numero">6</p>Invitados</li>
-                <li><p class="numero">15</p>Talleres</li>
-                <li><p class="numero">3</p>Dias</li>
-                <li><p class="numero">9</p>Conferencias</li>
-            </ul>
-        </div>
-    </div>
+            <div id="paquetes" class="paquetes">
+                <h3>Elige el numero de boletos</h3>
+            
 
-    <section class=" seccion">
-        <h2>precios</h2>
-        <div class="contenedor">
             <ul class="lista-precios clearfix">
                 <li>
                     <div class="tabla-precio">
@@ -182,7 +100,10 @@
                             <li>Todas las conferencias</li>
                             <li>Todos los talleres</li>
                         </ul>
-                        <a href="#" class="button hollow">Comprar</a>
+                        <div class="orden">
+                            <label for="pase_dia">Boletos deseados</label>
+                            <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
+                        </div>
                     </div>
                 </li>
                 <li>
@@ -194,88 +115,104 @@
                             <li>Todas las conferencias</li>
                             <li>Todos los talleres</li>
                         </ul>
-                        <a href="#" class="button">Comprar</a>
+                        <div class="orden">
+                            <label for="pase_completo">Boletos deseados</label>
+                            <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
+                        </div>
                     </div>
                 </li>
                 <li>
                     <div class="tabla-precio">
-                        <h3>pase por 2 dias</h3>
+                        <h3>pase por 2 dias(Viernes y sabado)</h3>
                         <p class="numero">$30</p>
                         <ul>
                             <li>Bocadillos gratis</li>
                             <li>Todas las conferencias</li>
                             <li>Todos los talleres</li>
                         </ul>
-                        <a href="#" class="button hollow">Comprar</a>
+                        <div class="orden">
+                            <label for="pase_dosdias">Boletos deseados</label>
+                            <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
+                        </div>
                     </div>
                 </li>
-            </ul>
-        </div>
+            </ul><!--.precios-->
+            </div><!--#Paquetes-->
+
+            <div id="eventos" class="eventos clearfix">
+                <h3>Elige tus talleres</h3>
+                <div class="caja">
+                      <div id="viernes" class="contenido-dia clearfix">
+                          <h4>Viernes</h4>
+                              <div>
+                                  <p>Talleres:</p>
+                                  <label><input type="checkbox" name="registro[]" id="taller_01" value="taller_01"><time>10:00</time> Responsive Web Design</label>
+                                  <label><input type="checkbox" name="registro[]" id="taller_02" value="taller_02"><time>12:00</time> Flexbox</label>
+                                  <label><input type="checkbox" name="registro[]" id="taller_03" value="taller_03"><time>14:00</time> HTML5 y CSS3</label>
+                                  <label><input type="checkbox" name="registro[]" id="taller_04" value="taller_04"><time>17:00</time> Drupal</label>
+                                  <label><input type="checkbox" name="registro[]" id="taller_05" value="taller_05"><time>19:00</time> WordPress</label>
+                              </div>
+                              <div>
+                                  <p>Conferencias:</p>
+                                  <label><input type="checkbox" name="registro[]" id="conf_01" value="conf_01"><time>10:00</time> Como ser Freelancer</label>
+                                  <label><input type="checkbox" name="registro[]" id="conf_02" value="conf_02"><time>17:00</time> Tecnologías del Futuro</label>
+                                  <label><input type="checkbox" name="registro[]" id="conf_03" value="conf_03"><time>19:00</time> Seguridad en la Web</label>
+                              </div>
+                              <div>
+                                  <p>Seminarios:</p>
+                                  <label><input type="checkbox" name="registro[]" id="sem_01" value="sem_01"><time>10:00</time> Diseño UI y UX para móviles</label>
+                              </div>
+                      </div> <!--#viernes-->
+                      <div id="sabado" class="contenido-dia clearfix">
+                          <h4>Sábado</h4>
+                          <div>
+                                <p>Talleres:</p>
+                                <label><input type="checkbox" name="registro[]" id="taller_06" value="taller_06"><time>10:00</time> AngularJS</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_07" value="taller_07"><time>12:00</time> PHP y MySQL</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_08" value="taller_08"><time>14:00</time> JavaScript Avanzado</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_09" value="taller_09"><time>17:00</time> SEO en Google</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_10" value="taller_10"><time>19:00</time> De Photoshop a HTML5 y CSS3</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_11" value="taller_11"><time>21:00</time> PHP Medio y Avanzado</label>
+                          </div>
+                          <div>
+                                <p>Conferencias:</p>
+                                <label><input type="checkbox" name="registro[]" id="conf_04" value="conf_04"><time>10:00</time> Como crear una tienda online que venda millones en pocos días</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_05" value="conf_05"><time>17:00</time> Los mejores lugares para encontrar trabajo</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_06" value="conf_06"><time>19:00</time> Pasos para crear un negocio rentable</label>
+                          </div>
+                          <div>
+                                <p>Seminarios:</p>
+                                <label><input type="checkbox" name="registro[]" id="sem_02" value="sem_02"><time>10:00</time> Aprende a Programar en una mañana</label>
+                                <label><input type="checkbox" name="registro[]" id="sem_03" value="sem_03"><time>17:00</time> Diseño UI y UX para móviles</label>
+                          </div>
+                      </div> <!--#sabado-->
+                      <div id="domingo" class="contenido-dia clearfix">
+                          <h4>Domingo</h4>
+                          <div>
+                                <p>Talleres:</p>
+                                <label><input type="checkbox" name="registro[]" id="taller_12" value="taller_12"><time>10:00</time> Laravel</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_13" value="taller_13"><time>12:00</time> Crea tu propia API</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_14" value="taller_14"><time>14:00</time> JavaScript y jQuery</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_15" value="taller_15"><time>17:00</time> Creando Plantillas para WordPress</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_16" value="taller_16"><time>19:00</time> Tiendas Virtuales en Magento</label>
+                          </div>
+                          <div>
+                                <p>Conferencias:</p>
+                                <label><input type="checkbox" name="registro[]" id="conf_07" value="conf_07"><time>10:00</time> Como hacer Marketing en línea</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_08" value="conf_08"><time>17:00</time> ¿Con que lenguaje debo empezar?</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_09" value="conf_09"><time>19:00</time> Frameworks y librerias Open Source</label>
+                          </div>
+                          <div>
+                                <p>Seminarios:</p>
+                                <label><input type="checkbox" name="registro[]" id="sem_04" value="sem_04"><time>14:00</time> Creando una App en Android en una tarde</label>
+                                <label><input type="checkbox" name="registro[]" id="sem_05" value="sem_05"><time>17:00</time> Creando una App en iOS en una tarde</label>
+                          </div>
+                      </div> <!--#domingo-->
+                  </div><!--.caja-->
+</div> <!--#eventos-->
+
     </section>
-
-    <div id="mapa" class="mapa"></div>
-
-    <section class="seccion">
-        <h2>Testimoniales</h2>
-        <div class="testimoniales clearfix">
-            <div class="testimonial contenedor clearfix">
-            <blockquote>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <footer class="info-testimonial clearfix">
-                    <img src="img/testimonial.jpg" alt="imagen testimonial">
-                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
-                </footer>
-            </blockquote>
-        </div> <!-- Testimonial -->
-        <div class="testimonial">
-            <blockquote>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <footer class="info-testimonial clearfix">
-                    <img src="img/testimonial.jpg" alt="imagen testimonial">
-                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
-                </footer>
-            </blockquote>
-        </div> <!-- Testimonial -->
-        <div class="testimonial">
-            <blockquote>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <footer class="info-testimonial clearfix"> 
-                    <img src="img/testimonial.jpg" alt="imagen testimonial">
-                    <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span> </cite>
-                </footer >
-            </blockquote>
-        </div> <!-- Testimonial -->
-    </div><!--Testimoniales -->
-    </section>
-
-
-    <div class="newsletter parallax">
-        <div class="contenido contenedor ">
-            <p>registrate al newletter</p>
-            <h3>gdlwebcamp</h3>
-            <a href="#" class="button transparente">Registro</a>
-        </div>
-    </div><!--contenido -->
-
-    <section class="seccion">
-
-        <h2>faltan</h2>
-        <div class="cuenta-regresiva contenedor">
-            <ul class="clearfix">
-                <li><p class="numero">80</p>Dias</li>
-                <li><p class="numero">15</p>horas</li>
-                <li><p class="numero">5</p>minutos</li>
-                <li><p class="numero">30</p>segundos</li>
-            </ul>
-        </div>
-
-    </section>
+   
 
     <footer class="site-footer">
         <div class="contenedor clearfix">
