--- a/registro.html
+++ b/registro.html
@@ -117,7 +117,7 @@
                         </ul>
                         <div class="orden">
                             <label for="pase_completo">Boletos deseados</label>
-                            <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
+                            <input type="number" min="0" id="pase_completo" size="3" placeholder="0">
                         </div>
                     </div>
                 </li>
@@ -132,7 +132,7 @@
                         </ul>
                         <div class="orden">
                             <label for="pase_dosdias">Boletos deseados</label>
-                            <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
+                            <input type="number" min="0" id="pase_dos_dias" size="3" placeholder="0">
                         </div>
                     </div>
                 </li>
