js: add map to page index.html

--- a/index.html
+++ b/index.html
@@ -213,7 +213,10 @@
         </div>
     </section>
 
-    <div id="mapa" class="mapa"></div>
+    <div id="mapa" class="mapa">
+
+
+    </div>
 
     <section class="seccion">
         <h2>Testimoniales</h2>
@@ -333,6 +336,9 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAryKBaK6uc9TcMHD4GFDPPyVaCHC_gMkg&callback=initMap"
+        async defer></script>
+    
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
