--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <a href="#Conferencias"><i class="fas fa-comment"></i>Conferencias</a>
                     <a href="#Seminarios"><i class="fas fa-university"></i>Seminarios</a>
                 </nav>
-                <div id="talleres" class="info-curso ocultar clearfix">
+                <div id="Talleres" class="info-curso ocultar clearfix">
                     <div class="detalle-evento">
                         <h3> HTML, CSS3 y JavaScript</h3>
                         <p><i class="fas fa-clock"></i> 16:00</p>
@@ -110,6 +110,37 @@
                     </div>
                     <a href="#" class="button float-right">ver todos</a>
                 </div><!--info-curso-->
+                <div id="Conferencias" class="info-curso ocultar clearfix">
+                    <div class="detalle-evento">
+                        <h3> Como ser Freelancer</h3>
+                        <p><i class="fas fa-clock"></i> 10:00</p>
+                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
+                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
+                    </div>
+                    <div class="detalle-evento">
+                        <h3> Responsive Web Design </h3>
+                        <p><i class="fas fa-clock"></i> 20s:00</p>
+                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
+                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
+                    </div>
+                    <a href="#" class="button float-right">ver todos</a>
+                </div><!--info-curso-->
+                <div id="Seminarios" class="info-curso ocultar clearfix">
+                    <div class="detalle-evento">
+                        <h3> Tecnologias del futuro</h3>
+                        <p><i class="fas fa-clock"></i> 16:00</p>
+                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
+                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
+                    </div>
+                    <div class="detalle-evento">
+                        <h3> Responsive Web Design </h3>
+                        <p><i class="fas fa-clock"></i> 20s:00</p>
+                        <p><i class="fas fa-calendar"></i> 10 de Dic</p>
+                        <p><i class="fas fa-user"></i> Juan Pablo de la torre valdez</p>
+                    </div>
+                    <a href="#" class="button float-right">ver todos</a>
+                </div><!--info-curso-->
+
               </div><!--programa-evento -->
           </div><!--COntenedor -->
       </div><!--COntenido-programa-->
